bugsqua-vpc/sec-grp.tf
resource "aws_security_group" "bastion-sg" {
  name        = "bastion-sg"
  description = "Security group for bastion host instance"
  vpc_id      = module.vpc.vpc_id
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = [var.MYIP]
  }
}



resource "aws_security_group" "jenkins-sg" {
  name        = "jenkins-sg"
  description = "Security group for jenkins instances"
  vpc_id      = module.vpc.vpc_id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port       = 22
    protocol        = "tcp"
    to_port         = 22
    cidr_blocks = ["0.0.0.0/0"] 
  }
}

resource "aws_security_group" "database-sg" {
  name        = "database-sg"
  description = "Security group for database"
  vpc_id      = module.vpc.vpc_id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
   }

  ingress {
    from_port       = 22
    protocol        = "tcp"
    to_port         = 22
    cidr_blocks = ["0.0.0.0/0"] 
  }
}
